--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask
-gunicorn
 python-telegram-bot==13.15
-requests
-pandas
-numpy
-python-dotenv
-pyarrow
-pytz
+Flask==3.0.2
+gunicorn==21.2.0
+pandas==2.2.2
+numpy==1.26.4
+requests==2.32.3
+pytz==2024.1
+APScheduler==3.10.4
+python-dotenv==1.0.1
