--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
+# --- Telegram bot stack (v13) ---
 python-telegram-bot==13.15
-Flask==3.0.2
+
+# --- Web server / webhook ---
+Flask==3.0.3
 gunicorn==21.2.0
+
+# --- Scheduling / timezones ---
+APScheduler==3.10.4
+pytz==2024.1
+tzlocal==5.2
+six==1.16.0
+
+# --- Data / math ---
 pandas==2.2.2
 numpy==1.26.4
+
+# --- HTTP ---
 requests==2.32.3
-pytz==2024.1
-APScheduler==3.10.4
+
+# --- Env vars ---
 python-dotenv==1.0.1
+
+# --- Flask deps (pinned for stability) ---
+Jinja2==3.1.4
+Werkzeug==3.0.3
+itsdangerous==2.1.2
+click==8.1.7
+blinker==1.8.2
