--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 python-telegram-bot==20.7
 Flask==3.0.3
 gunicorn==21.2.0
+
 pandas==2.2.2
 numpy==1.26.4
 requests==2.32.3
 python-dotenv==1.0.1
 pytz==2024.1
+
+Jinja2==3.1.4
+Werkzeug==3.0.3
+itsdangerous==2.1.2
+click==8.1.7
+blinker==1.8.2
